Change default email address

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <address>
       Studio Tvor s.r.o.<br/>
       <a href="tel:+420 737 879 717">+420 737 879 717</a><br/>
-      <a href="mailto:matej@studiotvor.com">matej@studiotvor.com</a>
+      <a href="mailto:us@studiotvor.com">us@studiotvor.com</a>
     </address>
   </body>
 </html>
