Update email addresses

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <address>
       Studio Tvor s.r.o.<br/>
       <a href="tel:+420 737 879 717">+420 737 879 717</a><br/>
-      <a href="mailto:us@studiotvor.com">us@studiotvor.com</a>
+      <a href="mailto:us@tvor.com">us@tvor.com</a>
     </address>
   </body>
 </html>
