--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h1>Studio Tvor</h1>
     <address>
       Studio Tvor s.r.o.<br/>
-      <a href="tel:+420 737 879 717">+420 737 879 717</a><br/>
+      <a href="tel:+420737879717">+420 737 879 717</a><br/>
       <a href="mailto:us@tvor.com">us@tvor.com</a>
     </address>
   </body>
