first minor adjustments

--- a/index.html
+++ b/index.html
@@ -1,31 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Studio Tvor</title>
-    <meta name="description" content="---">
-    <meta name="author" content="Matěj Kašpar Jirásek">
-    <script src="https://use.typekit.net/tzl0snv.js"></script>
-    <script>try{Typekit.load({ async: true });}catch(e){}</script>
-    <link rel="stylesheet" href="style.css">
-    <!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-90409807-1', 'auto');
-      ga('send', 'pageview');
-    </script>
-  </head>
-  <body>
-    <h1>Studio Tvor</h1>
-    <address>
-      Studio Tvor s.r.o.<br/>
-      <a href="tel:+420737879717">+420 737 879 717</a><br/>
-      <a href="mailto:us@tvor.com">us@tvor.com</a>
-    </address>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>3HConsulting</title>
+        <meta name="description" content="---">
+        <meta name="author" content="Jiří Zajíc">
+        <link href="https://fonts.googleapis.com/css?family=Lato:100,400&amp;subset=latin-ext" rel="stylesheet">
+        <link rel="stylesheet" href="style.css">
+        <!--[if lt IE 9]>
+        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+    </head>
+    <body>
+        <h1>3HConsulting</h1>
+        <address>
+            3HConsulting s.r.o.<br/>
+            <a href="tel:+420606942626">+420 606 942 626</a><br/>
+            <a href="mailto:info@3hconsulting.cz">info@3hconsulting.cz</a>
+        </address>
+    </body>
 </html>
