--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
         <![endif]-->
     </head>
     <body>
-        <h1>3HConsulting</h1>
+        <header>
+            <svg viewbox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" id="canvas1">
+                <ellipse id="earLeft" stroke="rgb(255, 255, 255)" fill="none" cx="0.04" cy="-21" rx="8.39" ry="25.1"  transform="translate(49.83, 51.19) rotate(-45)" />
+                <ellipse id="earRight" stroke="rgb(255, 255, 255)" fill="none" cx="20.97" cy="-0.06" rx="25.1" ry="8.39"  transform="translate(49.83, 51.19) rotate(-45)" />
+            </svg>
+            <h1>3HConsulting</h1>
+        </header>
         <address>
             3HConsulting s.r.o.<br/>
             <a href="tel:+420606942626">+420 606 942 626</a><br/>
