--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <address>
             3HConsulting s.r.o.<br/>
-            <a href="tel:+420606942626">+420 606 942 626</a><br/>
+            <!-- <a href="tel:+420606942626">+420 606 942 626</a><br/> -->
             <a href="mailto:info@3hconsulting.cz">info@3hconsulting.cz</a>
         </address>
     </body>
