--- a/index.html
+++ b/index.html
@@ -3,13 +3,34 @@
     <head>
         <meta charset="utf-8">
         <title>3HConsulting</title>
-        <meta name="description" content="---">
+        <meta name="description" content="Konzultace a služby v oblasti IT.">
         <meta name="author" content="Jiří Zajíc">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,400&amp;subset=latin-ext" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./favicomatic/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./favicomatic/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./favicomatic/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="144x144" href="./favicomatic/apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="60x60" href="./favicomatic/apple-touch-icon-60x60.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="120x120" href="./favicomatic/apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="76x76" href="./favicomatic/apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon-precomposed" sizes="152x152" href="./favicomatic/apple-touch-icon-152x152.png" />
+        <link rel="icon" type="image/png" href="./favicomatic/favicon-196x196.png" sizes="196x196" />
+        <link rel="icon" type="image/png" href="./favicomatic/favicon-96x96.png" sizes="96x96" />
+        <link rel="icon" type="image/png" href="./favicomatic/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="./favicomatic/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="./favicomatic/favicon-128.png" sizes="128x128" />
+        <meta name="application-name" content="&nbsp;"/>
+        <meta name="msapplication-TileColor" content="#FFFFFF" />
+        <meta name="msapplication-TileImage" content="mstile-144x144.png" />
+        <meta name="msapplication-square70x70logo" content="mstile-70x70.png" />
+        <meta name="msapplication-square150x150logo" content="mstile-150x150.png" />
+        <meta name="msapplication-wide310x150logo" content="mstile-310x150.png" />
+        <meta name="msapplication-square310x310logo" content="mstile-310x310.png" />
     </head>
     <body>
         <header>
