--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
         <!--[if lt IE 9]>
         <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <![endif]-->
+        <!--[if IE]>
+        <link rel="stylesheet" type="text/css" href="all-ie-only.css" />
+        <![endif]-->
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./favicomatic/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./favicomatic/apple-touch-icon-114x114.png" />
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./favicomatic/apple-touch-icon-72x72.png" />
