--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
     <head>
         <meta charset="utf-8">
-        <title>3HConsulting</title>
+        <title>3HC Advisory Group</title>
         <meta name="description" content="Konzultace a služby v oblasti IT.">
         <meta name="author" content="Jiří Zajíc">
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400&amp;subset=latin-ext" rel="stylesheet">
@@ -49,12 +49,13 @@
                 <ellipse id="earLeft" stroke="rgb(255, 255, 255)" fill="none" cx="0.04" cy="-21" rx="8.39" ry="25.1" transform="translate(49.83, 51.19) rotate(-45)" />
                 <ellipse id="earRight" stroke="rgb(255, 255, 255)" fill="none" cx="20.97" cy="-0.06" rx="25.1" ry="8.39" transform="translate(49.83, 51.19) rotate(-45)" />
             </svg>
-            <h1>3HConsulting</h1>
+            <h1 class="threehc">3HC</h1>
+            <h1 class="advisorygroup">advisory group</h1>
         </header>
         <address>
-            3HConsulting s.r.o.<br/>
+            3HC Advisory Group s.r.o.<br/>
             <!-- <a href="tel:+420606942626">+420 606 942 626</a><br/> -->
-            <a href="mailto:info@3hconsulting.cz">info@3hconsulting.cz</a>
+            <a href="mailto:info@3hc.cz">info@3hc.cz</a>
         </address>
     </body>
 </html>
