Font with latin-ext support

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>3HC Advisory Group</title>
         <meta name="description" content="Konzultace a služby v oblasti IT.">
         <meta name="author" content="Jiří Zajíc">
-        <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400&amp;subset=latin-ext" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,300&amp;subset=latin-ext" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!--[if lt IE 9]>
@@ -55,7 +55,7 @@
         <address>
             3HC Advisory Group s.r.o.<br/>
             <a href="mailto:info@3hc.cz">info@3hc.cz</a><br />
-            IC: 06926703<span style="position: absolute; margin-left: -88px; margin-top: -6px; font-size: 10px">v</span>
+            IČ: 06926703
         </address>
     </body>
 </html>
