--- a/index.html
+++ b/index.html
@@ -57,5 +57,12 @@
             <a href="mailto:info@3hc.cz">info@3hc.cz</a><br />
             IČ: 06926703
         </address>
+        <section>
+            <h2>references</h2>
+            <a href="http://www.calyx.cz" target="_blank"><div style="background-image: url('./img/ref-calyx.png')"></div></a>
+            <a href="http://www.flipcom.cz" target="_blank"><div style="background-image: url('./img/ref-flipcom.png')"></div></a>
+            <a href="http://www.tvisionmedia.cz" target="_blank"><div style="background-image: url('./img/ref-tvision.png')"></div></a>
+            <a href="http://www.honeywell.com" target="_blank"><div style="background-image: url('./img/ref-honeywell.png')"></div></a>
+        </section>
     </body>
 </html>
