Pekab logo added

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <a href="http://www.flipcom.cz" target="_blank"><div style="background-image: url('./img/ref-flipcom.png')"></div></a>
             <a href="http://www.tvisionmedia.cz" target="_blank"><div style="background-image: url('./img/ref-tvision.png')"></div></a>
             <a href="http://www.honeywell.com" target="_blank"><div style="background-image: url('./img/ref-honeywell.png')"></div></a>
+            <a href="http://www.pekab.cz" target="_blank"><div style="background-image: url('./img/ref-pekab.png')"></div></a>
         </section>
     </body>
 </html>
