Using flexbox for centering, screw IE

--- a/index.html
+++ b/index.html
@@ -6,14 +6,9 @@
         <meta name="description" content="Konzultace a služby v oblasti IT.">
         <meta name="author" content="Jiří Zajíc">
         <link href="https://fonts.googleapis.com/css?family=Work+Sans:100,300&amp;subset=latin-ext" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./style.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--[if lt IE 9]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-        <!--[if IE]>
-        <link rel="stylesheet" type="text/css" href="all-ie-only.css" />
-        <![endif]-->
+
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="./favicomatic/apple-touch-icon-57x57.png" />
         <link rel="apple-touch-icon-precomposed" sizes="114x114" href="./favicomatic/apple-touch-icon-114x114.png" />
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="./favicomatic/apple-touch-icon-72x72.png" />
@@ -44,19 +39,29 @@
         </script>
     </head>
     <body>
-        <header>
-            <svg viewbox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" id="canvas1">
-                <ellipse id="earLeft" stroke="rgb(255, 255, 255)" fill="none" cx="0.04" cy="-21" rx="8.39" ry="25.1" transform="translate(49.83, 51.19) rotate(-45)" />
-                <ellipse id="earRight" stroke="rgb(255, 255, 255)" fill="none" cx="20.97" cy="-0.06" rx="25.1" ry="8.39" transform="translate(49.83, 51.19) rotate(-45)" />
-            </svg>
-            <h1 class="threehc">3HC</h1>
-            <h1 class="advisorygroup">advisory group</h1>
-        </header>
-        <address>
-            3HC Advisory Group s.r.o.<br/>
-            <a href="mailto:info@3hc.cz">info@3hc.cz</a><br />
-            IČ: 06926703
-        </address>
+        <main>
+            <div>
+                <header>
+                    <svg viewbox="0 0 100 100" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" id="canvas1">
+                        <ellipse id="earLeft" stroke="rgb(255, 255, 255)" fill="none" cx="0.04" cy="-21" rx="8.39" ry="25.1" transform="translate(49.83, 51.19) rotate(-45)" />
+                        <ellipse id="earRight" stroke="rgb(255, 255, 255)" fill="none" cx="20.97" cy="-0.06" rx="25.1" ry="8.39" transform="translate(49.83, 51.19) rotate(-45)" />
+                    </svg>
+                    <h1 class="threehc">3HC</h1>
+                    <h1 class="advisorygroup">advisory group</h1>
+                </header>
+                <address>
+                    3HC Advisory Group s.r.o.<br/>
+                    <a href="mailto:info@3hc.cz">info@3hc.cz</a><br />
+                    IČ: 06926703<br />
+                    <br />
+                    Spisová značka C 105145 vedená u Krajského soudu v Brně<br />
+                    <br />
+                    Bubeníčkova 4363/38<br />
+                    Brno, 615 00<br />
+                    Czechia
+                </address>
+            </div>
+        </main>
         <section>
             <h2>references</h2>
             <a href="http://www.calyx.cz" target="_blank"><div style="background-image: url('./img/ref-calyx.png')"></div></a>
